server/deploy/mgz/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: aoe2companion-mgz-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - mgz.aoe2companion.com
      secretName: mgz-aoe2companion-com-tls
  rules:
    - host: mgz.aoe2companion.com
      http:
        paths:
          - backend:
              serviceName: aoe2companion-mgz
              servicePort: 80
